--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -174,6 +174,9 @@
     .input {
         @apply bg-white block w-full p-2 rounded-md shadow-sm border border-gray-300 dark:border-gray-600 text-gray-500;
     }
+    .input-error {
+        @apply text-red-500 dark:text-red-400 text-sm;
+    }
     .btn {
         @apply font-medium px-4 py-2 rounded-md;
     }
